# backend/docs/swagger.yaml
@@ -45,8 +45,6 @@ definitions:
     type: object
   internal_api_get_orders.Order:
     properties:
-      clientName:
-        type: string
       completionTime:
         type: integer
       cost:
@@ -55,8 +53,6 @@ definitions:
         type: string
       id:
         type: string
-      rating:
-        type: number
       title:
         type: string
     type: object
@@ -1107,10 +1103,6 @@ paths:
             $ref: '#/definitions/echo.HTTPError'
         "403":
           description: Forbidden
-          schema:
-            $ref: '#/definitions/echo.HTTPError'
-        "404":
-          description: Not Found
           schema:
             $ref: '#/definitions/echo.HTTPError'
         "500":
